Refactor InMemorySchemaRepositoryTest to enable schema testing
- Uncommented and updated test methods for adding and retrieving schemas, entity types, complex types, and enum types.
- Enhanced setupTestData method to initialize test schemas, entity types, complex types, and enum types.
- Added tests for handling null schemas and namespaces, as well as verifying empty collections.
- Implemented thread safety tests for concurrent schema additions.
- Ensured proper validation of schema statistics and namespace retrieval.